@@ -7,6 +7,7 @@
 -【conf】{<$v.album_allow_ver_ext>}の設定を削除
 trust_mode時に、拡張子制限が外れるという誤った説明が残っていた。((危険すぎるため途中で制限が外れないよう仕様変更されたのですが、説明を変更するのを忘れていた。))
 -【Fix/httpd】mime.types をロードする際、コメントも処理していた。
+-【Fix/httpd】"file?query" 形式のとき、ファイルをロードできない。
 -【Fix/アルバム】ゴミ箱関連のファイル名の挙動がおかしい。
 
 *Ver3.23 : 2019/03/12
